# Compile

./: CMakeLists.txt  QA.md  README.md  pl0.c  pl0.h
gui/: CodeEditor.cpp  CodeEditor.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
gui/resources/: watermark.css  watermark.txt
include/pl0/: AST.hpp  Codegen.hpp  Diagnostics.hpp  Driver.hpp  Lexer.hpp  Options.hpp  PCode.hpp  Parser.hpp  Symbol.hpp  SymbolTable.hpp  Token.hpp  Utility.hpp  VM.hpp
src/: Codegen.cpp  Diagnostics.cpp  Driver.cpp  Lexer.cpp  PCode.cpp  Parser.cpp  Symbol.cpp  SymbolTable.cpp  Token.cpp  Utility.cpp  VM.cpp  main.cpp
tests/: CMakeLists.txt  sample_report.txt
tests/samples/: array_bounds.pcode  array_bounds.pl0  assign_write.pcode  assign_write.pl0  compound_assign.pcode  compound_assign.pl0  damo.pl0  error_missing_semicolon.pl0  if_else.pcode  if_else.pl0  io_mix.pcode  io_mix.pl0  nested_proc.pl0  repeat_until.pcode  repeat_until.pl0  while_arith.pcode  while_arith.pl0
tests/unit/: CodegenTests.cpp  LexerTests.cpp  ParserTests.cpp  TestMain.cpp  TestSupport.cpp  TestSupport.hpp  VmTests.cpp  catch.hpp
tools/: pl0c.cpp  pl0dis.cpp  pl0run.cpp  run_samples.py
